// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`forwarding signals to the child 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "./daemon.mjs:3",
              "name": "stop",
              "static": true,
              "type": "function",
            },
          ],
          "name": "daemon",
          "type": "class",
        },
      ],
      "name": "daemon",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "",
      "event": "call",
      "id": 1,
      "lineno": 3,
      "method_id": "stop",
      "parameters": [],
      "path": "./daemon.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping a simple script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "./index.js:13",
              "name": "immediatePromise",
              "static": true,
              "type": "function",
            },
            {
              "location": "./index.js:17",
              "name": "throws",
              "static": true,
              "type": "function",
            },
            {
              "location": "./index.js:4",
              "name": "foo",
              "static": true,
              "type": "function",
            },
            {
              "location": "./index.js:8",
              "name": "promised",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "index",
      "type": "package",
    },
  ],
  "eventUpdates": {
    "8": {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise",
        "object_id": 2,
        "value": "Promise { 'promised return' }",
      },
      "thread_id": 0,
    },
  },
  "events": [
    {
      "defined_class": "",
      "event": "call",
      "id": 1,
      "lineno": 17,
      "method_id": "throws",
      "parameters": [],
      "path": "./index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "exceptions": [
        {
          "class": "Error",
          "message": "throws intentionally",
          "object_id": 1,
        },
      ],
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "",
      "event": "call",
      "id": 3,
      "lineno": 4,
      "method_id": "foo",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "44",
        },
      ],
      "path": "./index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 4,
      "parent_id": 3,
      "return_value": {
        "class": "Number",
        "value": "88",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "",
      "event": "call",
      "id": 5,
      "lineno": 4,
      "method_id": "foo",
      "parameters": [
        {
          "class": "Number",
          "name": "x",
          "value": "42",
        },
      ],
      "path": "./index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 6,
      "parent_id": 5,
      "return_value": {
        "class": "Number",
        "value": "84",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "",
      "event": "call",
      "id": 7,
      "lineno": 8,
      "method_id": "promised",
      "parameters": [],
      "path": "./index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 8,
      "parent_id": 7,
      "return_value": {
        "class": "Promise",
        "object_id": 2,
        "value": "Promise { <pending> }",
      },
      "thread_id": 0,
    },
    {
      "defined_class": "",
      "event": "call",
      "id": 9,
      "lineno": 13,
      "method_id": "immediatePromise",
      "parameters": [],
      "path": "./index.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 9,
      "return_value": {
        "class": "Promise",
        "object_id": 3,
        "value": "Promise { 'immediate' }",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping an mjs script 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "./index.mjs:1",
              "name": "helloWorld",
              "static": true,
              "type": "function",
            },
          ],
          "name": "index",
          "type": "class",
        },
      ],
      "name": "index",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "helloWorld",
      "parameters": [],
      "path": "./index.mjs",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping generator functions 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "./generator.js:1",
              "name": "f1",
              "static": true,
              "type": "function",
            },
          ],
          "name": "generator",
          "type": "class",
        },
      ],
      "name": "generator",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "",
      "event": "call",
      "id": 1,
      "lineno": 1,
      "method_id": "f1",
      "parameters": [],
      "path": "./generator.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "return_value": {
        "class": "",
        "object_id": 1,
        "value": "Object [Generator] {}",
      },
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;

exports[`mapping js class methods and constructors containing super keyword 1`] = `
{
  "classMap": [
    {
      "children": [
        {
          "children": [
            {
              "location": "./class.js:16",
              "name": "constructor",
              "static": false,
              "type": "function",
            },
            {
              "location": "./class.js:21",
              "name": "m1",
              "static": false,
              "type": "function",
            },
          ],
          "name": "B",
          "type": "class",
        },
        {
          "children": [
            {
              "location": "./class.js:2",
              "name": "constructor",
              "static": false,
              "type": "function",
            },
            {
              "location": "./class.js:6",
              "name": "m1",
              "static": false,
              "type": "function",
            },
          ],
          "name": "A",
          "type": "class",
        },
      ],
      "name": "class",
      "type": "package",
    },
  ],
  "events": [
    {
      "defined_class": "A",
      "event": "call",
      "id": 1,
      "lineno": 2,
      "method_id": "constructor",
      "parameters": [],
      "path": "./class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 2,
      "parent_id": 1,
      "thread_id": 0,
    },
    {
      "defined_class": "B",
      "event": "call",
      "id": 3,
      "lineno": 16,
      "method_id": "constructor",
      "parameters": [],
      "path": "./class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 4,
      "lineno": 2,
      "method_id": "constructor",
      "parameters": [],
      "path": "./class.js",
      "static": true,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 5,
      "parent_id": 4,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 6,
      "parent_id": 3,
      "thread_id": 0,
    },
    {
      "defined_class": "B",
      "event": "call",
      "id": 7,
      "lineno": 21,
      "method_id": "m1",
      "parameters": [],
      "path": "./class.js",
      "receiver": {
        "class": "B",
        "object_id": 1,
        "value": "B {}",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "defined_class": "A",
      "event": "call",
      "id": 8,
      "lineno": 6,
      "method_id": "m1",
      "parameters": [],
      "path": "./class.js",
      "receiver": {
        "class": "B",
        "object_id": 1,
        "value": "B {}",
      },
      "static": false,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 9,
      "parent_id": 8,
      "thread_id": 0,
    },
    {
      "elapsed": 31.337,
      "event": "return",
      "id": 10,
      "parent_id": 7,
      "thread_id": 0,
    },
  ],
  "metadata": {
    "app": "appmap-node",
    "client": {
      "name": "appmap-node",
      "url": "https://github.com/getappmap/appmap-node",
      "version": "test node-appmap version",
    },
    "language": {
      "engine": "Node.js",
      "name": "javascript",
      "version": "test node version",
    },
    "name": "test process recording",
    "recorder": {
      "name": "process",
      "type": "process",
    },
  },
  "version": "1.12",
}
`;
